--- a/index.html
+++ b/index.html
@@ -3,41 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Athing.net</title>
+    <title>AThing.net - Home</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
+        /* Apply Inter font globally */
         body {
-            font-family: sans-serif;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: black; /* Set background to black */
-            color: white;           /* Set default text color to white for contrast */
-            min-height: 100vh;      /* Ensure body takes full viewport height */
-            margin: 0;              /* Remove default body margin */
+            font-family: 'Inter', sans-serif;
+            /* Ensure scrolling works smoothly */
+            overflow-x: hidden;
+            /* Slightly darker gradient background */
+            background: linear-gradient(to bottom, #0a0a0a, #000000);
         }
-        .form-container {
-            width: 100%;
-            max-width: 800px; /* Adjust max-width as needed */
-            margin-top: 20px;
-            /* Note: The background *inside* the form embed itself
-               is controlled by Fillout and might remain white/light. */
+        /* Custom styles for OLED black theme */
+        .bg-oled-black {
+            background-color: #000000; /* Fallback */
         }
-        h1 {
-            text-align: center;
-            margin-bottom: 30px;
-             /* Color is inherited from body, no change needed unless you want a different color */
+        /* Ensure embed resizes correctly */
+        .fillout-embed-container > div {
+             min-height: 500px; /* Start with a minimum height */
+        }
+
+        /* Keyframes for the pulsing glow animation */
+        @keyframes pulse-glow {
+            0%, 100% {
+                box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.3),
+                            0 0 5px 2px rgba(255, 255, 255, 0.1) inset;
+            }
+            50% {
+                box-shadow: 0 0 25px 8px rgba(255, 255, 255, 0.4), /* Brighter glow */
+                            0 0 7px 3px rgba(255, 255, 255, 0.15) inset; /* Slightly brighter inner */
+            }
+        }
+
+        /* White glow effect with animation */
+        .glow-white {
+            /* Base glow */
+            box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.3),
+                        0 0 5px 2px rgba(255, 255, 255, 0.1) inset;
+            /* Apply the animation */
+            animation: pulse-glow 4s infinite ease-in-out;
+            /* Ensure background is pure black */
+            background-color: #000000;
+        }
+
+        /* Refined link hover effect */
+        .nav-link:hover {
+            background-color: rgba(255, 255, 255, 0.1); /* Subtle white background */
+            color: #ffffff; /* White text */
         }
     </style>
 </head>
-<body>
+<body class="text-gray-100 min-h-screen flex flex-col items-center pt-8 px-4">
 
-    <h1>If you are having issues report them below</h1>
+    <header class="glow-white rounded-full px-6 py-3 w-full max-w-md mx-auto mb-12">
+        <nav class="flex justify-center items-center space-x-4 md:space-x-8">
+            <a href="https://request.athing.net"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="nav-link text-gray-300 px-4 py-2 rounded-full transition-all duration-300 ease-in-out text-sm md:text-base">
+                Request Your Next Watch
+            </a>
+            <a href="https://check.athing.net"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="nav-link text-gray-300 px-4 py-2 rounded-full transition-all duration-300 ease-in-out text-sm md:text-base">
+                Server Status
+            </a>
+        </nav>
+    </header>
 
-    <div class="form-container">
-        <div style="width:100%;height:500px;" data-fillout-id="i2awJ2kqRHus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize></div>
-        <script src="https://server.fillout.com/embed/v1/"></script>
-        </div>
+    <main class="glow-white rounded-lg p-6 md:p-8 w-full max-w-3xl mx-auto flex-grow mb-8">
+        <h2 class="text-xl md:text-2xl font-semibold text-center text-white mb-6">
+            If you have an issue with one of our services submit an issue below
+        </h2>
+
+        <div class="fillout-embed-container">
+            <div style="width:100%;height:100%;" data-fillout-id="i2awJ2kqRHus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize></div>
+            <script src="https://server.fillout.com/embed/v1/"></script>
+            </div>
+    </main>
+
+    <footer class="text-center text-gray-500 text-sm pb-4">
+        &copy; <script>document.write(new Date().getFullYear())</script> AThing.net
+    </footer>
 
 </body>
 </html>
